--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 *,
 ::after,
 ::before {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 html {
@@ -37,9 +38,15 @@ a {
 }
 .header__inner {
   padding: 45px 0 36px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .header__logo {
   display: block;
@@ -52,8 +59,12 @@ a {
   height: 100%;
 }
 .header__call {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-right: 65px;
 }
 .header__call--img {
@@ -67,8 +78,13 @@ a {
   height: 100%;
 }
 .header__call--item {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin-left: 13px;
 }
 .header__call--item__number {
@@ -108,7 +124,9 @@ a {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
   z-index: -1;
 }
 .title--autor {
@@ -120,7 +138,9 @@ a {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
   width: 744px;
   height: 54px;
   background: #FDEAEE;
@@ -167,8 +187,12 @@ a {
   margin-bottom: 0;
 }
 .text--autor {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-bottom: 30px;
 }
 .text--autor:last-of-type {
@@ -187,7 +211,8 @@ a {
   padding: 25px 81px 26px 81px;
   background: #7AC9B6;
   font-family: "IBM Plex Sans", sans-serif;
-  box-shadow: 5px 5px 5px rgba(246, 134, 102, 0.4);
+  -webkit-box-shadow: 5px 5px 5px rgba(246, 134, 102, 0.4);
+          box-shadow: 5px 5px 5px rgba(246, 134, 102, 0.4);
   border-radius: 90px;
   color: #ffffff;
   text-align: center;
@@ -196,8 +221,11 @@ a {
 }
 .button:hover {
   background: #F58688;
-  box-shadow: 5px 5px 5px rgba(255, 181, 176, 0.4);
+  -webkit-box-shadow: 5px 5px 5px rgba(255, 181, 176, 0.4);
+          box-shadow: 5px 5px 5px rgba(255, 181, 176, 0.4);
   opacity: 0.7;
+  -webkit-transition: 0.2s linear;
+  -o-transition: 0.2s linear;
   transition: 0.2s linear;
 }
 .button--buy {
@@ -210,6 +238,8 @@ a {
 .button--buy:hover {
   background-color: #F58688;
   border: none;
+  -webkit-transition: 0.2s linear;
+  -o-transition: 0.2s linear;
   transition: 0.2s linear;
   cursor: pointer;
 }
@@ -219,9 +249,15 @@ a {
 }
 .intro__inner {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .intro__inner::before {
   content: url("../img/intro/intro-art.svg");
@@ -237,8 +273,13 @@ a {
 }
 .intro__block {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 .intro__block::before {
   content: url("../img/intro/date.svg");
@@ -248,8 +289,12 @@ a {
 }
 .intro__block--item {
   margin-bottom: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .intro__block svg {
   margin-right: 20px;
@@ -264,20 +309,35 @@ a {
 }
 .program__inner {
   margin-top: 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .program__inner--item {
   position: relative;
   margin-bottom: 110px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 980px;
   padding: 60px 203px 100px 115px;
   background: #FFFFFF;
-  box-shadow: 5px 5px 20px rgba(40, 31, 30, 0.2);
+  -webkit-box-shadow: 5px 5px 20px rgba(40, 31, 30, 0.2);
+          box-shadow: 5px 5px 20px rgba(40, 31, 30, 0.2);
   border-radius: 25px;
 }
 .program__inner--item:last-of-type {
@@ -332,15 +392,21 @@ a {
 .autor__inner {
   position: relative;
   margin-top: 75px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 .autor__inner--item {
   margin: 0 100px 0 auto;
   width: 580px;
   padding: 60px;
   background: #FFFFFF;
-  box-shadow: 5px 5px 20px rgba(40, 31, 30, 0.2);
+  -webkit-box-shadow: 5px 5px 20px rgba(40, 31, 30, 0.2);
+          box-shadow: 5px 5px 20px rgba(40, 31, 30, 0.2);
   border-radius: 25px;
 }
 .autor__img {
@@ -356,9 +422,15 @@ a {
   padding: 0 0 145px 0;
 }
 .buy__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .buy__form {
   display: block;
@@ -382,9 +454,16 @@ a {
 }
 .footer__inner {
   margin-top: 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .footer__inner--text {
   font-weight: normal;
@@ -402,12 +481,18 @@ a {
 }
 .footer__inner--email:hover {
   color: #FFD583;
+  -webkit-transition: 0.2s linear;
+  -o-transition: 0.2s linear;
   transition: 0.2s linear;
 }
 .footer__link {
   margin: 60px auto 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 550px;
 }
 .footer__link--item {
@@ -418,6 +503,8 @@ a {
 }
 .footer__link--item:hover {
   fill: #F58688;
+  -webkit-transition: 0.2s linear;
+  -o-transition: 0.2s linear;
   transition: 0.2s linear;
 }
 .footer__link--item svg {
@@ -451,21 +538,15 @@ a {
     width: 500px;
     margin: 0 35px 0 auto;
   }
-
-  .title--autor {
-    padding: 0 13%;
-  }
-  .title--autor::before {
-    width: 560px;
-    top: 73%;
-  }
 }
 @media (max-width: 991px) {
   .header__call {
     display: none;
   }
   .header__inner {
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 
   .intro__inner {
@@ -485,6 +566,14 @@ a {
   .title--intro {
     text-align: center;
     padding: 24px 0 22px 0;
+  }
+  .title--autor {
+    width: 500px;
+    margin: 0 auto;
+  }
+  .title--autor::before {
+    width: 500px;
+    top: 71%;
   }
   .title--buy {
     width: auto;
@@ -507,9 +596,16 @@ a {
 
   .intro__inner {
     position: static;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding-top: 46px;
   }
   .intro__inner::before {
@@ -523,16 +619,27 @@ a {
     display: none;
   }
   .intro__block {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .intro__block::before {
     bottom: -121px;
   }
   .intro__block--item {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: auto;
   }
   .intro__img {
@@ -579,15 +686,23 @@ a {
   }
 
   .autor__inner {
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   .autor__inner--item {
     margin: 0 auto;
     width: 90%;
     background: #FFFFFF;
-    box-shadow: 5px 5px 20px rgba(40, 31, 30, 0.2);
+    -webkit-box-shadow: 5px 5px 20px rgba(40, 31, 30, 0.2);
+            box-shadow: 5px 5px 20px rgba(40, 31, 30, 0.2);
     border-radius: 25px;
   }
   .autor__img {
@@ -599,7 +714,10 @@ a {
     padding: 0 0 70px 0;
   }
   .buy__inner {
-    flex-direction: column-reverse;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
   }
   .buy__inner--item {
     margin: 0;
@@ -705,7 +823,7 @@ a {
     height: 26px;
   }
   .title--autor {
-    padding: 0 14%;
+    width: 300px;
   }
   .title--autor::before {
     width: 196px;
@@ -752,19 +870,34 @@ a {
   .autor__inner--item {
     margin-top: 20px;
     padding: 50px 23px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .autor__img {
     width: 80%;
     height: auto;
   }
   .autor__text {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     text-align: center;
   }
 
@@ -780,7 +913,9 @@ a {
   }
 
   .buy__inner {
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .buy__input {
     width: 400px;
